--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -84,31 +84,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <LinearLayout
+                <GridLayout
                     android:id="@+id/profile_branches_tab"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:columnCount="3">
 
-                    <Switch
-                        android:id="@+id/switch1"
-                        android:layout_width="match_parent"
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Switch" />
-                </LinearLayout>
+                        tools:srcCompat="@tools:sample/avatars" />
 
-                <LinearLayout
+                    <ImageView
+                        android:id="@+id/imageView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:srcCompat="@tools:sample/avatars" />
+
+                    <ImageView
+                        android:id="@+id/imageView6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:srcCompat="@tools:sample/avatars" />
+                </GridLayout>
+
+                <GridLayout
                     android:id="@+id/profile_roots_tab"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_marginEnd="5dp"
+                    android:columnCount="3">
 
-                    <Button
-                        android:id="@+id/button3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Button" />
-                </LinearLayout>
+                </GridLayout>
 
             </FrameLayout>
         </LinearLayout>
