--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -64,6 +64,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/view_border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,11 +85,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-<!--                <GridLayout-->
-<!--                    android:id="@+id/profile_branches_tab"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:columnCount="3"/>-->
+                <!--                <GridLayout-->
+                <!--                    android:id="@+id/profile_branches_tab"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="match_parent"-->
+                <!--                    android:columnCount="3" />-->
 
                 <GridLayout
                     android:id="@+id/profile_roots_tab"
@@ -102,4 +103,15 @@
             </FrameLayout>
         </LinearLayout>
     </TabHost>
+
+    <!--    <Button-->
+    <!--        android:id="@+id/button"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:onClick="follow"-->
+    <!--        android:text="@string/follow_label"-->
+    <!--        app:layout_constraintBottom_toTopOf="@+id/profile_tabs"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toEndOf="@+id/profile_profile_pic"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
