--- a/app/src/main/res/menu/activity_main_feed_drawer.xml
+++ b/app/src/main/res/menu/activity_main_feed_drawer.xml
@@ -12,10 +12,10 @@
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_profile" />
-<!--        <item-->
-<!--            android:id="@+id/nav_slideshow"-->
-<!--            android:icon="@drawable/ic_menu_slideshow"-->
-<!--            android:title="@string/menu_slideshow" />-->
+        <item
+            android:id="@+id/nav_posts"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_posts" />
 <!--        <item-->
 <!--            android:id="@+id/nav_tools"-->
 <!--            android:icon="@drawable/ic_menu_manage"-->
@@ -23,16 +23,12 @@
     </group>
 
 <!--    <item android:title="Communicate">-->
-<!--        <menu>-->
+<!--&lt;!&ndash;        <menu>&ndash;&gt;-->
 <!--            <item-->
 <!--                android:id="@+id/nav_share"-->
 <!--                android:icon="@drawable/ic_menu_share"-->
 <!--                android:title="@string/menu_share" />-->
-<!--            <item-->
-<!--                android:id="@+id/nav_send"-->
-<!--                android:icon="@drawable/ic_menu_send"-->
-<!--                android:title="@string/menu_send" />-->
-<!--        </menu>-->
+
 <!--    </item>-->
 
 </menu>
